--- a/aspnetIE/aspnet/Web.config
+++ b/aspnetIE/aspnet/Web.config
@@ -12,7 +12,8 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" requestValidationMode="2.0" />
+    <pages validateRequest="false" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
