--- a/aspnetIE/aspnet/bin/aspnet.dll.config
+++ b/aspnetIE/aspnet/bin/aspnet.dll.config
@@ -12,8 +12,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" requestValidationMode="2.0" />
-    <pages validateRequest="false" />
+    <httpRuntime targetFramework="4.6.1" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
